[dev-22246] Fix where the wrong font family was being used for paragraphs and links (#1413)
* Fix the issue where the wrong font was being used for paragraphs and links.

* Ensure paragraph links are the secondary font.

* Make font family fix with Jesse's custom font changes

* make the same fix for links

* removing the p a selector as inherit on a should handle it.

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -42,7 +42,7 @@ p,
     @include typography.paragraph;
 
     & {
-        font-family: var(--prezly-font-family-paragraph, var(--prezly-font-family));
+        font-family: var(--prezly-font-family-paragraph, var(--prezly-font-family-secondary));
     }
 }
 
